fix: adds some float clearing and fixes overflow issues on buttons in lists

--- a/source/scss/layout/_grid.scss
+++ b/source/scss/layout/_grid.scss
@@ -13,7 +13,7 @@
 }
 .grid__item {
   float: left;
-  overflow: inherit;
+  overflow: visible;
   height: inherit;
   box-sizing: inherit;
   &--two-thirds {
