--- a/source/scss/modules/_button.scss
+++ b/source/scss/modules/_button.scss
@@ -36,6 +36,7 @@
 
 .apprenticeship__button {
   width: 100%;
+  text-align: center;
   @include sb-media( 45em ) {
     width: auto;
   }
